--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -47,7 +47,8 @@
         android:fontFamily="@font/chunk_five_ex"
         android:text="@string/call_type"
         android:textAllCaps="true"
-        android:textSize="@dimen/caption8"
+        android:textSize="@dimen/caption6"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbarContainer" />
 
@@ -57,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/row01"
         android:background="@color/off_white_smoke"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/callTypeTextView">
 
@@ -122,7 +124,7 @@
         android:fontFamily="@font/chunk_five_ex"
         android:text="@string/call_settings"
         android:textAllCaps="true"
-        android:textSize="@dimen/caption3"
+        android:textSize="@dimen/caption6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/videoTypeContainer" />
 
@@ -140,7 +142,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="@dimen/row08"
+            android:layout_marginStart="@dimen/row04"
             android:layout_weight="1"
             android:text="@string/allow_repeat_calls"
             android:textSize="@dimen/caption3"
@@ -174,7 +176,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="@dimen/row08"
+            android:layout_marginStart="@dimen/row04"
             android:layout_weight="1"
             android:text="@string/game_mode"
             android:textSize="@dimen/caption3"
@@ -204,7 +206,7 @@
         android:fontFamily="@font/chunk_five_ex"
         android:text="@string/general"
         android:textAllCaps="true"
-        android:textSize="@dimen/caption3"
+        android:textSize="@dimen/caption6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gameModesContainer" />
 
@@ -222,7 +224,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="@dimen/row08"
+            android:layout_marginStart="@dimen/row04"
             android:layout_weight="1"
             android:text="@string/report_a_problem"
             android:textSize="@dimen/caption3"
@@ -255,7 +257,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="@dimen/row08"
+            android:layout_marginStart="@dimen/row04"
             android:layout_weight="1"
             android:text="@string/about_us"
             android:textSize="@dimen/caption3"
