--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -74,13 +74,13 @@
         android:id="@+id/callActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/row02"
+        android:layout_marginBottom="@dimen/row02"
+        android:contentDescription="@null"
         android:src="@drawable/ic_baseline_phone_24"
-        app:tint="@color/white_100"
-        android:backgroundTint="@color/turquoise"
+        app:backgroundTint="@color/turquoise"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="@dimen/row02"
-        android:layout_marginEnd="@dimen/row02"
-        android:contentDescription="@null" />
+        app:tint="@color/white_100" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
