--- a/app/src/main/res/layout/list_item_group.xml
+++ b/app/src/main/res/layout/list_item_group.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="@dimen/row01"
@@ -9,8 +8,7 @@
     android:layout_marginEnd="@dimen/row01"
     android:layout_marginBottom="@dimen/row005"
     android:background="@drawable/rounded_bg_white"
-    android:elevation="@dimen/row01"
-    android:foreground="?attr/selectableItemBackground">
+    android:elevation="@dimen/row01">
 
     <ImageView
         android:id="@+id/memberOneImageView"
@@ -64,6 +62,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/row04"
+        android:textColor="@color/black_70"
         app:layout_constraintEnd_toStartOf="@id/arrowImageView"
         app:layout_constraintStart_toStartOf="@id/groupNameTextView"
         app:layout_constraintTop_toBottomOf="@id/groupNameTextView"
