--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,34 +1,54 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/messages_header">
+    <PreferenceCategory app:title="@string/call_settings">
 
-        <EditTextPreference
-            app:key="signature"
-            app:title="@string/signature_title"
-            app:useSimpleSummaryProvider="true" />
+        <SwitchPreferenceCompat
+            app:key="allowRepeat"
+            app:title="@string/allow_repeat_calls" />
 
-        <ListPreference
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:key="reply"
-            app:title="@string/reply_title"
-            app:useSimpleSummaryProvider="true" />
+        <SwitchPreferenceCompat
+            app:key="gameModes"
+            app:summary="@string/game_mode_summary"
+            app:title="@string/game_mode" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory app:title="@string/general">
 
-        <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title" />
+        <Preference app:title="Report a Problem">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="mailto:charlesawoodson@gmail.com" />
+        </Preference>
 
-        <SwitchPreferenceCompat
-            app:dependency="sync"
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+    </PreferenceCategory>
+
+    <PreferenceCategory app:title="Follow Us">
+
+        <Preference
+            android:icon="@drawable/facebook_logo"
+            app:title="Facebook">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="http://www.facebook.com/letsroolet" />
+        </Preference>
+
+        <Preference
+            android:icon="@drawable/twitter_logo"
+            app:title="Twitter">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="http://www.twitter.com/letsroolet" />
+        </Preference>
+
+        <Preference
+            android:icon="@drawable/roolet_icon_grey"
+            app:title="Instagram">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="http://www.instagram.com/letsroolet" />
+        </Preference>
 
     </PreferenceCategory>
 
