--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,14 +1,73 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/settings"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
-    <FrameLayout
-        android:id="@+id/settings"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/row01">
+
+        <ImageView
+            android:id="@+id/cirtualImageView"
+            android:layout_width="@dimen/row04"
+            android:layout_height="@dimen/row04"
+            android:layout_marginEnd="@dimen/row005"
+            android:layout_marginBottom="@dimen/row01"
+            android:contentDescription="@null"
+            android:src="@drawable/facebook_logo"
+            app:layout_constraintBottom_toTopOf="@id/productionsTextView"
+            app:layout_constraintEnd_toStartOf="@+id/digsImageView"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/digsImageView"
+            android:layout_width="@dimen/row04"
+            android:layout_height="@dimen/row04"
+            android:layout_marginStart="@dimen/row005"
+            android:layout_marginBottom="@dimen/row01"
+            android:contentDescription="@null"
+            android:src="@drawable/twitter_logo"
+            app:layout_constraintBottom_toTopOf="@id/productionsTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/cirtualImageView" />
+
+        <TextView
+            android:id="@+id/productionsTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/row0025"
+            android:gravity="center"
+            android:text="Cirtual x D17 Productions"
+            android:textSize="@dimen/caption1"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/makingStuffTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/makingStuffTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/row01"
+            android:gravity="center"
+            android:text="@string/making_fun_stuff"
+            android:textSize="@dimen/caption1"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
