Swapped settings activity w appropriate transitions

--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -46,9 +46,9 @@
             android:id="@+id/productionsTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/row0025"
+            android:layout_marginBottom="@dimen/row00025"
             android:gravity="center"
-            android:text="Cirtual x D17 Productions"
+            android:text="@string/cirtual_x_d17_productions"
             android:textSize="@dimen/caption1"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/makingStuffTextView"
