Improvements to game modes... need to fetch rules json file

--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -22,7 +22,7 @@
             android:layout_marginEnd="@dimen/row005"
             android:layout_marginBottom="@dimen/row01"
             android:contentDescription="@null"
-            android:src="@drawable/facebook_logo"
+            android:src="@drawable/cirtual_logo"
             app:layout_constraintBottom_toTopOf="@id/productionsTextView"
             app:layout_constraintEnd_toStartOf="@+id/digsImageView"
             app:layout_constraintHorizontal_bias="0.5"
@@ -36,7 +36,7 @@
             android:layout_marginStart="@dimen/row005"
             android:layout_marginBottom="@dimen/row01"
             android:contentDescription="@null"
-            android:src="@drawable/twitter_logo"
+            android:src="@drawable/d17_logo"
             app:layout_constraintBottom_toTopOf="@id/productionsTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
