--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -160,6 +160,7 @@
         android:id="@+id/progressSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -174,12 +175,12 @@
         android:gravity="center"
         android:textSize="@dimen/caption10"
         android:textStyle="bold"
+        android:text="@string/contact_permissions_needed"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view"
-        tools:text="Instructions"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
