--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -77,6 +77,7 @@
         android:layout_marginEnd="@dimen/row04"
         android:gravity="center"
         android:text="@string/add_party_label"
+        android:textColor="@color/black_60"
         android:textSize="@dimen/caption10"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
