--- a/app/src/main/res/layout/view_group_detail_tutorial.xml
+++ b/app/src/main/res/layout/view_group_detail_tutorial.xml
@@ -6,22 +6,48 @@
     android:layout_height="match_parent"
     android:background="@color/black_20">
 
+    <TextView
+        android:id="@+id/groupNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/row02"
+        android:fontFamily="@font/chunk_five_ex"
+        android:textColor="@color/white"
+        android:textSize="@dimen/caption12"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toStartOf="@id/editGroupImageView"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/editGroupImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/row02"
+        android:gravity="center"
+        android:padding="@dimen/row01"
+        android:text="@string/edit"
+        android:textColor="@color/white_100"
+        android:textSize="@dimen/caption7"
+        app:layout_constraintBottom_toBottomOf="@id/groupNameTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/groupNameTextView" />
+
     <ImageView
         android:id="@+id/tutorialArrowImageView"
         android:layout_width="@dimen/row08"
         android:layout_height="@dimen/row08"
-        android:layout_marginTop="@dimen/row06"
-        android:layout_marginEnd="@dimen/row07"
         android:contentDescription="@null"
         android:src="@drawable/ic_baseline_north_east_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/editGroupImageView"
+        app:layout_constraintTop_toBottomOf="@+id/editGroupImageView" />
 
     <TextView
         android:id="@+id/instructionsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/row01"
+        android:layout_marginTop="@dimen/row01"
         android:layout_marginEnd="@dimen/row02"
         android:fontFamily="@font/gochi_hand_regular"
         android:padding="@dimen/row01"
@@ -46,6 +72,7 @@
         android:id="@+id/secondaryInstructionsTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/row01"
         android:fontFamily="@font/gochi_hand_regular"
         android:gravity="center"
         android:text="@string/tap_this_button_to_call_a_random_member_from_this_party"
