--- a/app/src/main/res/layout/view_groups_tutorial.xml
+++ b/app/src/main/res/layout/view_groups_tutorial.xml
@@ -8,6 +8,20 @@
     android:animateLayoutChanges="true"
     android:background="@color/black_40">
 
+    <ImageView
+        android:id="@+id/addGroupImageView"
+        android:layout_width="@dimen/row05"
+        android:layout_height="@dimen/row05"
+        android:layout_marginTop="@dimen/row02"
+        android:layout_marginEnd="@dimen/row02"
+        android:contentDescription="@null"
+        android:padding="@dimen/row005"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        android:src="@drawable/ic_outline_group_add_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/skipTextView"
         android:layout_width="wrap_content"
@@ -27,27 +41,26 @@
         android:layout_width="@dimen/row08"
         android:layout_height="@dimen/row08"
         android:layout_marginEnd="@dimen/row06"
-        android:layout_marginBottom="@dimen/row02"
         android:contentDescription="@null"
         android:src="@drawable/ic_baseline_north_east_24"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@id/tapHereCreatePartyTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addGroupImageView"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/tapHereCreatePartyTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/row08"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/gochi_hand_regular"
         android:text="@string/tap_here_to_create_a_new_party"
         android:textColor="@color/white_100"
         android:textSize="@dimen/subhead3"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@id/instructionsTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tutorialArrowImageView"
         tools:visibility="visible" />
 
     <TextView
@@ -56,16 +69,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/row04"
         android:layout_marginEnd="@dimen/row04"
-        android:layout_marginBottom="@dimen/row12"
+        android:layout_marginBottom="@dimen/row02"
         android:fontFamily="@font/gochi_hand_regular"
         android:gravity="center"
         android:text="@string/roolet_uses_contacts_message"
         android:textColor="@color/white_100"
         android:textSize="@dimen/subhead3"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/groupItem"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tapHereCreatePartyTextView"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <include
         android:id="@+id/groupItem"
@@ -73,12 +88,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/row02"
-        android:layout_marginTop="@dimen/row04"
         android:layout_marginEnd="@dimen/row02"
+        android:layout_marginBottom="@dimen/row08"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/tapAnywhereTextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instructionsTextView"
+        app:layout_constraintTop_toBottomOf="@+id/instructionsTextView"
         tools:visibility="visible" />
 
     <TextView
