--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -55,4 +55,5 @@
     <color name="white_100">#FFFFFF</color>
 
     <color name="light_gray">#DEDEDE</color>
+    <color name="green">#00ff2b</color>
 </resources>
