--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.Roolet" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/roolet_blue</item>
         <item name="colorPrimaryVariant">@color/roolet_blue</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Status bar color. -->
