Converted ContactsFragment to use toolbar with new menu res

--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -4,73 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:background="@color/off_white_smoke"
-    tools:context=".contacts.ContactsActivity">
+    tools:context=".groups.GroupsActivity">
 
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/row16"
+        android:layout_height="0dp"
         android:background="@color/roolet_blue"
+        app:layout_constraintBottom_toTopOf="@id/filterContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/groupMembersRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/row01"
-        app:layout_constraintBottom_toTopOf="@id/filterFrameLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/groupTitleEditText"
-        tools:itemCount="2"
-        tools:listitem="@layout/selected_contact_list_item" />
-
-    <FrameLayout
-        android:id="@+id/backDeleteContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/row02"
-        app:layout_constraintBottom_toBottomOf="@id/groupTitleEditText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/groupTitleEditText">
-
-        <ImageView
-            android:id="@+id/backImageView"
-            android:layout_width="@dimen/row04"
-            android:layout_height="@dimen/row04"
-            android:layout_gravity="center"
-            android:contentDescription="@null"
-            android:padding="@dimen/row005"
-            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/deleteGroupTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="@dimen/row0025"
-            android:text="@string/delete"
-            android:textColor="@color/white_100"
-            android:textSize="@dimen/caption7"
-            android:visibility="gone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </FrameLayout>
 
     <EditText
         android:id="@+id/groupTitleEditText"
         android:layout_width="0dp"
         android:layout_height="@dimen/row04"
-        android:layout_marginStart="@dimen/row03"
+        android:layout_marginStart="@dimen/row04"
         android:layout_marginTop="@dimen/row02"
-        android:layout_marginEnd="@dimen/row03"
+        android:layout_marginEnd="@dimen/row04"
         android:autofillHints="@null"
         android:background="@drawable/white_borders_off_white_bg_rounded"
         android:gravity="center"
@@ -81,35 +35,41 @@
         android:paddingEnd="@dimen/row01"
         android:textColor="@color/white"
         android:textSize="@dimen/caption7"
-        app:layout_constraintEnd_toStartOf="@id/saveGroupTextView"
-        app:layout_constraintStart_toEndOf="@id/backDeleteContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/saveGroupTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/row02"
-        android:contentDescription="@null"
-        android:gravity="center"
-        android:padding="@dimen/row0025"
-        android:src="@drawable/ic_outline_group_add_24"
-        android:text="@string/save"
-        android:textColor="@color/white_100"
-        android:textSize="@dimen/caption7"
-        app:layout_constraintBottom_toBottomOf="@id/groupTitleEditText"
+    <Space
+        android:id="@+id/space"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/row02"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/groupTitleEditText" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/groupTitleEditText" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/groupMembersRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/space"
+        tools:itemCount="6"
+        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        tools:listitem="@layout/selected_contact_list_item"
+        tools:spanCount="6"
+        tools:visibility="visible" />
 
     <LinearLayout
-        android:id="@+id/filterFrameLayout"
+        android:id="@+id/filterContainer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/row06"
         android:animateLayoutChanges="true"
         android:background="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view">
+        app:layout_constraintTop_toBottomOf="@+id/groupMembersRecyclerView">
 
         <EditText
             android:id="@+id/filterEditText"
@@ -150,7 +110,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filterFrameLayout"
+        app:layout_constraintTop_toBottomOf="@+id/filterContainer"
         tools:listitem="@layout/contact_list_item" />
 
     <ProgressBar
@@ -170,9 +130,9 @@
         android:layout_marginStart="@dimen/row04"
         android:layout_marginEnd="@dimen/row04"
         android:gravity="center"
+        android:text="@string/contact_permissions_needed"
         android:textSize="@dimen/caption10"
         android:textStyle="bold"
-        android:text="@string/contact_permissions_needed"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
