--- a/app/src/main/res/menu/create_group_menu.xml
+++ b/app/src/main/res/menu/create_group_menu.xml
@@ -5,7 +5,8 @@
     <item
         android:id="@+id/action_delete"
         android:title="@string/delete"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:visible="false"/>
 
     <item
         android:id="@+id/action_save"
