--- a/app/src/main/res/layout/fragment_group_detail.xml
+++ b/app/src/main/res/layout/fragment_group_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/off_white_smoke"
-    tools:context=".groups.GroupsActivity">
+    tools:context=".RooletActivity">
 
     <View
         android:id="@+id/view"
