--- a/app/src/main/res/layout/fragment_groups.xml
+++ b/app/src/main/res/layout/fragment_groups.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
     android:background="@color/off_white_smoke"
-    tools:context=".groups.GroupsActivity">
+    tools:context=".RooletActivity">
 
     <View
         android:id="@+id/view"
