--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -139,5 +139,6 @@
     <dimen name="column48">307.2dp</dimen>
     <dimen name="column49">313.6dp</dimen>
     <dimen name="column50">320dp</dimen>
+    <dimen name="toolbar_icon_margin">12dp</dimen>
 
 </resources>
