--- a/app/src/main/res/layout/view_group_detail_tutorial.xml
+++ b/app/src/main/res/layout/view_group_detail_tutorial.xml
@@ -6,32 +6,27 @@
     android:layout_height="match_parent"
     android:background="@color/black_20">
 
-    <TextView
-        android:id="@+id/groupNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/row02"
-        android:fontFamily="@font/chunk_five_ex"
-        android:textColor="@color/white"
-        android:textSize="@dimen/caption12"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@id/editGroupImageView"
+    <Space
+        android:id="@+id/space"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/editGroupImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/row02"
+        android:layout_marginEnd="@dimen/toolbar_icon_margin"
         android:gravity="center"
-        android:padding="@dimen/row01"
+        android:textAllCaps="true"
         android:text="@string/edit"
         android:textColor="@color/white_100"
-        android:textSize="@dimen/caption7"
-        app:layout_constraintBottom_toBottomOf="@id/groupNameTextView"
+        android:textSize="@dimen/caption4"
+        app:layout_constraintBottom_toBottomOf="@id/space"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/groupNameTextView" />
+        app:layout_constraintTop_toTopOf="@id/space" />
 
     <ImageView
         android:id="@+id/tutorialArrowImageView"
